--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
 $main: #0d2d6c;
 $secondary: #68cef2;
-$clickable: #b7006a;
+$clickable: blue;
 $highlight: #cbdb2f;
 $highlight-bg: #eff4c1;
 $gray: #84898c;
