--- a/style.css
+++ b/style.css
@@ -1,64 +1,1 @@
-/* BOX MODEL SETTING FOR ALL ELEMENTS BY DEFAULT
-THIS IS BETTER THAN DEFAULT, YOU SHOULD ALWAYS USE THIS:
-*/
-html {
-  box-sizing: border-box; }
-
-*, *:before, *:after {
-  box-sizing: inherit; }
-
-/* END BOX MODEL SETTINGS */
-.clearfix {
-  zoom: 1;
-  /* For IE 6/7 (trigger hasLayout) */ }
-  .clearfix:before, .clearfix:after {
-    content: "";
-    display: table; }
-  .clearfix:after {
-    clear: both; }
-
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-    visibility: visible; }
-  100% {
-    opacity: 0;
-    visibility: hidden; } }
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    visibility: hidden; }
-  100% {
-    opacity: 1;
-    visibility: visible; } }
-
-body {
-  font-size: 16px;
-  font-family: 'Open Sans', Helvetica, Roboto, Arial, sans-serif;
-  color: #343741;
-  margin: 0;
-  padding: 0; }
-
-p {
-  color: #343741; }
-
-a {
-  color: #b7006a;
-  transition: color 0.5s ease; }
-  a:hover {
-    color: #980058; }
-
-button, a.button {
-  box-sizing: border-box;
-  border: none;
-  display: block;
-  background-color: #b7006a;
-  color: white;
-  text-align: center;
-  cursor: pointer;
-  transition: background-color 0.5s ease;
-  line-height: 1.2em;
-  max-width: 300px; }
-  button:hover, a.button:hover {
-    background-color: #980058; }
+html{box-sizing:border-box}*,:after,:before{box-sizing:inherit}.clearfix{zoom:1}.clearfix:after,.clearfix:before{content:"";display:table}.clearfix:after{clear:both}body{font-size:16px;font-family:Open Sans,Helvetica,Roboto,Arial,sans-serif;margin:0;padding:0}body,p{color:#343741}a{color:blue;transition:color .5s ease}a:hover{color:#006}a.button,button{box-sizing:border-box;border:none;display:block;background-color:blue;color:#fff;text-align:center;cursor:pointer;transition:background-color .5s ease;line-height:1.2em;max-width:300px}a.button:hover,button:hover{background-color:#0000e0}h1{color:red}
