this isn't working

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,7 +1,7 @@
-$main: #0d2d6c;
-$secondary: #68cef2;
-$clickable: blue;
-$highlight: #cbdb2f;
+$main: #1B194A;
+$secondary: #1B194A;
+$clickable: #DD5612;
+$highlight: #DD5612;
 $highlight-bg: #eff4c1;
 $gray: #84898c;
 $lgray: #cecece;
