--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,9 @@
 @import "mixins";
 @import "colors";
 @import "type";
+@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab');
+/*font-family: 'Roboto Slab', serif;
+font-family: 'Roboto', sans-serif;*/
 @import "buttons";
 @import "header";
 @import "navigation";
