--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
 $main: #1B194A;
 $secondary: #1B194A;
-$clickable: #DD5612;
+$clickable: red;
 $highlight: #DD5612;
 $highlight-bg: #eff4c1;
 $gray: #84898c;
